lightbox test added

--- a/resources/_posts/2016-06-10-lightbox.md
+++ b/resources/_posts/2016-06-10-lightbox.md
@@ -3,8 +3,11 @@ layout: resource
 name: Underwater Light Box
 ---
 
+<center>
+{% include image.html path="/resources/images/" img="lb_green_red_ready" caption="Lightbox ready to deploy." %}
+</center>
 
-
+{% include image.html path="/resources/images/" img="lb_green_red_ready" caption="Lightbox ready" %}
 
 ## How to wire the LED circuit?
 
