parallel wiring example added

--- a/resources/_posts/2016-06-10-lightbox.md
+++ b/resources/_posts/2016-06-10-lightbox.md
@@ -3,11 +3,14 @@ layout: resource
 name: Underwater Light Box
 ---
 
-<center>
-{% include image.html path="/resources/images/" img="lb_green_red_ready" caption="Lightbox ready to deploy." %}
-</center>
+<br/><br/>
 
-{% include image.html path="/resources/images/" img="lb_green_red_ready" caption="Lightbox ready" %}
+<center>
+{% include image.html path="/resources/images/" img="materials" caption="Materials for the lightbox." %}
+
+{% include image.html path="/resources/images/" img="lb_green_red_ready" caption="Lightbox ready to deploy." %}
+
+</center>
 
 ## How to wire the LED circuit?
 
@@ -28,4 +31,8 @@ The total capacity (=lifetime) of a battery depends strongly on the material and
  - **Resistor ratings**: It is good practice to check the power rating of your resistor although this is unlikely to be a problem for the lightbox. The resistors linked/pictured in this tutorial are rated for 0.25 W (with 5% tolerance), which is far above what is necessary for this circuit even if running at maximum 25 mA
  $$\left( P=V\cdot I=0.8\text{ V}\cdot 25\text{ mA}=0.02\text{ W} \right)$$.
 
- - **Higher voltage LEDs**: If you want to drive several higher voltage LEDs (e.g. mutiple green, blue or UV), the 6V available from the 4 x AA battery pack may not be sufficient to drive them in series. You can either try to fit more batteries into the light box to increase total circuit voltage, use higher voltage batteries (be mindful of the trade-off in total capacity), or wire your LEDs in parallel instead of in series (adding the appropriate resistor for each LED) with the caveat this circuit will consume a lot more current so the batteries will not last as long!
+ <div class="pull-right gap-left">
+  {% include image.html path="/resources/images/" img="parallel_wiring" caption="Parallel wiring of two and two serial LEDs (blue and IR in series on the bottom, red and green on the top, total consumption ~20mA)." %}
+</div>
+
+ - **Higher voltage LEDs**: If you want to drive several higher voltage LEDs (e.g. mutiple green, blue or UV), the 6V available from the 4 x AA battery pack may not be sufficient to drive them in series. You can either try to fit more batteries into the light box to increase total circuit voltage, use higher voltage batteries (be mindful of the trade-off in total capacity), or wire your LEDs in parallel instead of in series (adding the appropriate resistor for each parallel circuit) with the caveat that this circuit will consume more current so the batteries will not last as long. See an example of parallel wiring of two and two serial LEDs (blue and IR in series on the bottom, red and green on the top) on the right.
