--- a/resources/_posts/2016-06-10-lightbox.md
+++ b/resources/_posts/2016-06-10-lightbox.md
@@ -3,14 +3,35 @@ layout: resource
 name: Underwater Light Box
 ---
 
-<br/><br/>
-
 <center>
-{% include image.html path="/resources/images/" img="materials" caption="Materials for the lightbox." %}
-
-{% include image.html path="/resources/images/" img="lb_green_red_ready" caption="Lightbox ready to deploy." %}
-
+<h1>The MBL Lightbox</h1>
+<h3>a low-cost water-proof light chamber for the in situ<br/> enrichment of phototrophic microorganisms</h3>
 </center>
+
+<br/>
+<span class="page-divider">
+<span class="one"></span>
+<span class="two"></span>
+
+<br/>
+
+## About
+
+<div class="pull-right gap-left">
+ {% include image.html path="/resources/images/" img="lb_green_red_ready" caption="Lightbox with red and green light sources right after laboratory water test and ready for environmental deployment." %}
+</div>
+
+The MBL lightbox was developed as a low-cost solution for the wave-length specific in situ enrichment of phototrophic microorganisms during the MBL Microbial Diversity course in the summer of 2015. The objective was to add a water-proof light source with an attached microscope slide holder to any aquatic environment to selectively enrich for microorganisms that thrive under the provided light regime(s) but within their native chemical environment. This is a short tutorial on how to construct the light box.
+
+## Materials
+
+<div class="pull-right gap-left">
+ {% include image.html path="/resources/images/" img="materials" caption="Materials for the lightbox." %}
+</div>
+
+ - Small, water proof project box
+ - **Acryl LED holder**: laser cut this design ([single cut](https://cdn.rawgit.com/KopfLab/labware_lightbox/master/lightbox_5mm_LED_holder_single_cut_0.250_inch_acryl.pdf) or [10 cuts on 12x12 inch plate](https://cdn.rawgit.com/KopfLab/labware_lightbox/master/lightbox_5mm_LED_holder_12x12plate_cut_0.250_inch_acryl.pdf)) from [1/4 inch clear acryl](http://www.mcmaster.com/#8560K354) (6mm will do just fine too) if laser cutter available, otherwise a handsaw and 5mm drill bit work well too)
+ - Microscope slide holder (3D print this STL file)
 
 ## How to wire the LED circuit?
 
@@ -36,3 +57,7 @@ The total capacity (=lifetime) of a battery depends strongly on the material and
 </div>
 
  - **Higher voltage LEDs**: If you want to drive several higher voltage LEDs (e.g. mutiple green, blue or UV), the 6V available from the 4 x AA battery pack may not be sufficient to drive them in series. You can either try to fit more batteries into the light box to increase total circuit voltage, use higher voltage batteries (be mindful of the trade-off in total capacity), or wire your LEDs in parallel instead of in series (adding the appropriate resistor for each parallel circuit) with the caveat that this circuit will consume more current so the batteries will not last as long. See an example of parallel wiring of two and two serial LEDs (blue and IR in series on the bottom, red and green on the top) on the right.
+
+<div class="pull-right">
+This tutorial is available online at <a href="{{ page.url }}">{{ page.url }}</a>.
+</div>
