--- a/resources/_posts/2016-06-10-lightbox.md
+++ b/resources/_posts/2016-06-10-lightbox.md
@@ -30,7 +30,7 @@ The MBL lightbox was developed as a low-cost solution for the wave-length specif
 </div>
 
  - Small, water proof project box
- - **Acryl LED holder**: laser cut this design ([single cut](https://cdn.rawgit.com/KopfLab/labware_lightbox/master/lightbox_5mm_LED_holder_single_cut_0.250_inch_acryl.pdf) or [10 cuts on 12x12 inch plate](https://cdn.rawgit.com/KopfLab/labware_lightbox/master/lightbox_5mm_LED_holder_12x12plate_cut_0.250_inch_acryl.pdf)) from [1/4 inch clear acryl](http://www.mcmaster.com/#8560K354) (6mm will do just fine too) if laser cutter available, otherwise a handsaw and 5mm drill bit work well too)
+ - **Acryl LED holder**: laser cut the holder ([single cut](https://cdn.rawgit.com/KopfLab/labware_lightbox/master/lightbox_5mm_LED_holder_single_cut_0.250_inch_acryl.pdf) or [10 cuts on 12x12 inch plate](https://cdn.rawgit.com/KopfLab/labware_lightbox/master/lightbox_5mm_LED_holder_12x12plate_cut_0.250_inch_acryl.pdf)) from [1/4 inch clear acryl](http://www.mcmaster.com/#8560K354) (or 6mm acryl) if laser cutter available, otherwise a handsaw and 5mm drill bit work well too)
  - Microscope slide holder (3D print this STL file)
 
 ## How to wire the LED circuit?
