front page update

--- a/resources/_posts/2016-06-10-lightbox.md
+++ b/resources/_posts/2016-06-10-lightbox.md
@@ -4,7 +4,7 @@ name: Underwater Light Box
 ---
 
 <center>
-<h1>The MBL Lightbox</h1>
+<h1>MBL Lightbox</h1>
 <h3>a low-cost water-proof light chamber for the in situ<br/> enrichment of phototrophic microorganisms</h3>
 </center>
 
