update about, add contact info

--- a/resources/_posts/2016-06-10-lightbox.md
+++ b/resources/_posts/2016-06-10-lightbox.md
@@ -5,7 +5,7 @@ name: Underwater Light Box
 
 <center>
 <h1>MBL Lightbox</h1>
-<h3>a low-cost water-proof light chamber for the in situ<br/> enrichment of phototrophic microorganisms</h3>
+<h3>a low-cost submersible light chamber for the in situ<br/> enrichment of phototrophic microorganisms</h3>
 </center>
 
 <br/>
@@ -19,7 +19,9 @@ name: Underwater Light Box
  {% include image.html path="/resources/images/" img="lb_green_red_ready" caption="Lightbox with red and green light sources right after laboratory water test and ready for environmental deployment." %}
 </div>
 
-The MBL lightbox was developed as a low-cost solution for the wave-length specific in situ enrichment of phototrophic microorganisms during the MBL Microbial Diversity course in the summer of 2015. The objective was to add a water-proof light source with an attached microscope slide holder to any aquatic environment to selectively enrich for microorganisms that thrive under the provided light regime(s) but within their native chemical environment. This is a short tutorial on how to construct the light box.
+The MBL lightbox is a reusable,
+submersible, battery-powered narrow-spectrum LED illumination chamber with a 3D
+printed, environmentally exposed microscope slide holder that was developed by [Sebastian Kopf](mailto:sebastian.kopf@colorado.edu) and [Sean Kearney](mailto:skearney@mit.edu) as a low-cost solution for wave-length specific in situ enrichment of phototrophic microorganisms at the 2015 MBL Microbial Diversity summer course. The method selectively enriches for microorganisms that thrive under the provided light regime(s) but within the natural chemical environment of their native habitat. This is a short tutorial on how to construct the light box.
 
 ## Materials
 
