--- a/resources/_posts/2016-06-10-lightbox.md
+++ b/resources/_posts/2016-06-10-lightbox.md
@@ -9,7 +9,7 @@ name: Underwater Light Box
 </center>
 
 <br/>
-<span class="page-divider">
+<span class="page-divider"></span>
 <span class="one"></span>
 <span class="two"></span>
 
