additional slide holder links and github

--- a/resources/_posts/2016-06-10-lightbox.md
+++ b/resources/_posts/2016-06-10-lightbox.md
@@ -27,11 +27,11 @@ printed, environmentally exposed microscope slide holder that was developed by [
 
  - **Enclosure**: small, water proof [project box](https://www.adafruit.com/products/903)
 
- - **Acryl LED holder**: laser cut the holder ([single cut](https://cdn.rawgit.com/KopfLab/labware_lightbox/master/lightbox_5mm_LED_holder_single_cut_0.250_inch_acryl.pdf) or [10 cuts on 12x12 inch plate](https://cdn.rawgit.com/KopfLab/labware_lightbox/master/lightbox_5mm_LED_holder_12x12plate_cut_0.250_inch_acryl.pdf)) from [1/4 inch clear acryl](http://www.mcmaster.com/#8560K354) (or 6mm acryl) if laser cutter available, otherwise a handsaw and 5mm drill bit work well too)
+ - **Acryl LED holder**: laser cut the holder ([single cut](https://cdn.rawgit.com/KopfLab/labware_lightbox/master/lightbox_5mm_LED_holder_single_cut_0.250_inch_acryl.pdf) or [10 cuts on 12x12 inch plate](https://cdn.rawgit.com/KopfLab/labware_lightbox/master/lightbox_5mm_LED_holder_12x12plate_cut_0.250_inch_acryl.pdf)) from [1/4 inch clear acryl](http://www.mcmaster.com/#8560K354) (or 6mm acryl) if laser cutter available, otherwise a handsaw and 5mm drill bit work well too). Additional variations on the original design that are optimized for [Tekon](http://www.tekdon.com/coated-microscope-slides.html) multi-well slides are available on [GitHub](https://www.github.com/KopfLab/labware_lightbox) (e.g. for [5mm 10 well slides](https://cdn.rawgit.com/KopfLab/labware_lightbox/master/lightbox_5mm_LED_holder_single_cut_0.250_inch_acryl_10well_slides.pdf), [4mm 24 well slides](https://cdn.rawgit.com/KopfLab/labware_lightbox/master/lightbox_5mm_LED_holder_single_cut_0.250_inch_acryl_24well_slides.pdf)).
 
  - **LEDs**: relatively inexpensive 5mm LEDs in the visible and near infra-red are available from many different vendors (e.g. [red](https://www.adafruit.com/products/297), [green](https://www.adafruit.com/products/300), [infra red](https://www.adafruit.com/products/388), [yellow](https://www.adafruit.com/products/2700)). Very specific LEDs are available from [Thorlabs](https://www.thorlabs.com/newgrouppage9.cfm?objectgroup_id=2814) but typically more expensive.
 
- - **Microscope slide holder**: 3D print the slide holder (STL files for [larger half](https://cdn.rawgit.com/KopfLab/labware_lightbox/master/light_chamber_big_half.stl) and [smaller half](https://cdn.rawgit.com/KopfLab/labware_lightbox/master/light_chamber_small_half.stl)) with any 3D printer (Makerbot is not ideal but tolerances are large enough that it will work)
+ - **Microscope slide holder**: 3D print the slide holder (STL files for [larger half](https://cdn.rawgit.com/KopfLab/labware_lightbox/master/light_chamber_large_gaps_big_half.stl) and [smaller half](https://cdn.rawgit.com/KopfLab/labware_lightbox/master/light_chamber_large_gaps_small_half.stl)) with any 3D printer (Makerbot is not ideal but tolerances are large enough that it will work). Additional variations on the original design are available on [GitHub](https://www.github.com/KopfLab/labware_lightbox).
 
  <div class="pull-right gap-left">
   {% include image.html path="/resources/images/" img="materials" caption="Materials for the lightbox." %}
