publications and resource with images

--- a/publications/references.bib
+++ b/publications/references.bib
@@ -74,6 +74,7 @@ month = jul
 }
 
 @article{Kopf:2015ds,
+url_Paper = {mypdfs/test.pdf},
 author = {Kopf, S H and Sessions, AL and Cowley, Elise S and Reyes, Carmen and Van Sambeek, Lindsey and Hu, Yang and Orphan, Victoria Jeanne and Kato, Roberta and Newman, D K},
 title = {{Trace incorporation of heavy water reveals slow and heterogeneous pathogen growth rates in cystic fibrosis sputum.}},
 journal = {Proceedings of the National Academy of Sciences},
@@ -81,6 +82,5 @@ year = {2016},
 volume = {113},
 number = {2},
 pages = {E110--6},
-month = jan
+month = {jan}
 }
-
