people page updated

--- a/people/_posts/2016-01-01-skopf.md
+++ b/people/_posts/2016-01-01-skopf.md
@@ -1,12 +1,17 @@
 ---
-layout: people
-name: Sebastian Kopf
-title: Assistant Professor
-image: skopf.jpg
-thumb: skopf_thumb.jpg
+layout: person
+title: Sebastian Kopf
+position: Assistant Professor
+group: faculty
 email: sebastian.kopf@colorado.edu
-office: Benson
-phone: +1
+phone: +1.303.735.6207
+address: >
+  Department of Geol. Sciences<br/>
+  2200 Colorado Ave<br/>
+  Office 246C<br/>
+  Boulder, CO 80309
+picture_profile: /images/people/skopf_thumb.jpg
+picture_page:  /images/people/skopf_mbl.jpg
 ---
 
 Sebastian is an assistant professor in the Department of Geological Sciences at the University of Colorado Boulder.
