--- a/people/_posts/2016-03-15-nadia.md
+++ b/people/_posts/2016-03-15-nadia.md
@@ -4,14 +4,16 @@ title: Nadia Dildar
 position: Laboratory Manager
 group: staff
 email: nadia.dildar@colorado.edu
-phone:
+phone: (303) 735-3277
 address: >
   Organic Geochemistry Lab<br/>
   4001 Discovery Drive<br/>
   Room #218, SEEC (Lab wing)<br/>
   Boulder, CO 80309
-picture_profile: /images/people/skopf_thumb.jpg
-picture_page:  /images/people/skopf_mbl.jpg
+picture_profile: /header_images/people/skopf_thumb.jpg
+picture_page:  /header_images/people/skopf_mbl.jpg
 ---
+
+# About
 
 Nadia is the laboratory manager of the Organic Geochemistry Core Facility
