--- a/people/_posts/2016-11-01-you.md
+++ b/people/_posts/2016-11-01-you.md
@@ -1,7 +1,9 @@
 ---
 layout: person
 title: New Lab Members
-position: Interested? Contact sebastian.kopf@colorado.edu about upcoming opportunities.
+position: Interested? Contact us about upcoming opportunities.
 group: grad
-picture_profile: /images/people/gitlab.png
+email: sebastian.kopf@colorado.edu
+thumbnail: /people/images/gitlab.png
+picture: /people/images/gitlab.png
 ---
