--- a/people/_posts/2016-09-15-shaelyn.md
+++ b/people/_posts/2016-09-15-shaelyn.md
@@ -6,8 +6,11 @@ group: undergrad
 email:
 phone:
 address:
-picture_profile: /images/people/skopf_thumb.jpg
-picture_page:  /images/people/skopf_mbl.jpg
+thumbnail: /people/images/shaelyn_thumbnail.jpg
+picture:  /people/images/shaelyn_quandary.jpg
+caption: On top of Quandary peak.
 ---
 
-Shaelyn is
+# About
+
+Shaelyn is a senior at the University of Colorado Boulder studying molecular biology and neuroscience. Cultivating her keen interest in geomicrobiology, she is currently working on her undergraduate honors thesis studying the morphological and isotopic effects of cyanobacteria under varying nitrogen partial pressures. She loves hiking 14ers, has traveled to 11 different countries and is an avid skier.
