lightbox image links updated

--- a/resources/_posts/2016-06-10-lightbox.md
+++ b/resources/_posts/2016-06-10-lightbox.md
@@ -1,27 +1,18 @@
 ---
 layout: resource
-name: Underwater Light Box
+title: MBL Light Box
+subtitle: >
+  a low-cost submersible light chamber for the in situ<br/>
+  enrichment of phototrophic microorganisms
 ---
-
-<center>
-<h1>MBL Lightbox</h1>
-<h3>a low-cost submersible light chamber for the in situ<br/> enrichment of phototrophic microorganisms</h3>
-</center>
-
-<br/>
-<span class="page-divider"></span>
-<span class="one"></span>
-<span class="two"></span>
 
 ## About
 
 <div class="pull-right gap-left">
- {% include image.html path="/resources/images/" img="lb_green_red_ready" caption="Lightbox with red and green light sources right after laboratory water test and ready for environmental deployment." %}
+ {% include image.html img="/resources/images/lightbox/lb_green_red_ready.jpg" caption="Lightbox with red and green light sources right after laboratory water test and ready for environmental deployment." %}
 </div>
 
-The MBL lightbox is a reusable,
-submersible, battery-powered narrow-spectrum LED illumination chamber with a 3D
-printed, environmentally exposed microscope slide holder that was developed by [Sebastian Kopf](mailto:sebastian.kopf@colorado.edu) and [Sean Kearney](mailto:skearney@mit.edu) as a low-cost solution for wave-length specific in situ enrichment of phototrophic microorganisms at the 2015 MBL Microbial Diversity summer course. The method selectively enriches for microorganisms that thrive under the provided light regime(s) but within the natural chemical environment of their native habitat. This is a short tutorial on how to construct the light box.
+The MBL lightbox is a reusable,submersible, battery-powered narrow-spectrum LED illumination chamber with a 3D printed, environmentally exposed microscope slide holder that was developed by [Sebastian Kopf](mailto:sebastian.kopf@colorado.edu) and [Sean Kearney](mailto:skearney@mit.edu) as a low-cost solution for wave-length specific in situ enrichment of phototrophic microorganisms at the 2015 MBL Microbial Diversity summer course. The method selectively enriches for microorganisms that thrive under the provided light regime(s) but within the natural chemical environment of their native habitat. This is a short tutorial on how to construct the light box.
 
 ## Materials
 
@@ -34,7 +25,7 @@ printed, environmentally exposed microscope slide holder that was developed by [
  - **Microscope slide holder**: 3D print the slide holder (STL files for [larger half](https://cdn.rawgit.com/KopfLab/labware_lightbox/master/light_chamber_large_gaps_big_half.stl) and [smaller half](https://cdn.rawgit.com/KopfLab/labware_lightbox/master/light_chamber_large_gaps_small_half.stl)) with any 3D printer (Makerbot is not ideal but tolerances are large enough that it will work). Additional variations on the original design are available on [GitHub](https://www.github.com/KopfLab/labware_lightbox).
 
  <div class="pull-right gap-left">
-  {% include image.html path="/resources/images/" img="materials" caption="Materials for the lightbox." %}
+  {% include image.html img="/resources/images/lightbox/materials.jpg" caption="Materials for the lightbox." %}
  </div>
 
  - **Glue**: any water proof glue to attach the slide holder to the top of the enclosure
@@ -50,13 +41,13 @@ printed, environmentally exposed microscope slide holder that was developed by [
 In this lightbox, we are using 4x AA batteries as the power source which provides a total of 4x 1.5V = 6V to drive our LEDs. To check which/how many LEDs we can power with this, we need to know the characteristic "forward voltage" of each LED (the approximate voltage drop across the LED). This voltage mostly depends on the color of the LED, for example red LEDs will typically have a forward voltage of 1.8-2.2 V while green LEDs might have 3.2-3.8 V. You can get the forward voltages from your LED datasheets (often denoted Vf) or estimate them from the typical values for the color in use (e.g. by looking up [LED voltages on Wikipedia](https://en.wikipedia.org/wiki/Light-emitting_diode#Colors_and_materials)).
 
 <div class="pull-right gap-left">
- {% include image.html path="/resources/images/" img="example_wiring_diagram" caption="Example wiring diagram." %}
+ {% include image.html img="/resources/images/lightbox/example_wiring_diagram.jpg" caption="Example wiring diagram." %}
 </div>
 
 To maximize battery life, it is best to wire the LEDs in series. This makes it easy to limit total current and the circuit has only 3 components: 1) the battery pack to power the circuit (here **6V**), 2) a resistor to control current flow, and 3) our LEDs. For an example circuit, we are including one red LED (forward voltage ~1.9V) and one green LED (forward voltage ~3.3V). To calculate which resistor to use, **determine the leftover voltage** in the circuit $$\left(V = 6\text{ V} - \sum V_f=6\text{ V} - 1.9\text{ V} - 3.3\text{ V} = 0.8\text{ V}\right)$$, then decide what current to run at. Typically LEDs are rated at a maximum current of ~20mA but **you can always run an LED with less current to reduce brightness and increase battery life**. For the example circuit, we will aim to run at **10mA** which is not maximum brightness but still quite a bit of light for bacterial phototrophs. Using Ohm's law, the required resistor is $$R = V/I = 0.8\text{ V}/10\text{ mA} = 80\text{ Ohm}$$. Resistors are usually available at specific values, a [useful set](https://www.amazon.com/E-Projects-EPC-103-Value-Resistor-Kit/dp/B00E9YQQSS/ref=sr_1_1?ie=UTF8&qid=1465668761) that covers many scenarios for the light box includes 10, 22, 47, 100 and 220 Ohm resistors. Rounding up to the closest resistor for the example circuit means we'll go with the **100 Ohm** resistor.
 
 <div class="pull-right gap-left">
- {% include image.html path="/resources/images/" img="example_wiring" caption="Example wiring for red plus green LED setup." %}
+ {% include image.html img="/resources/images/lightbox/example_wiring.jpg" caption="Example wiring for red plus green LED setup." %}
 </div>
 
 Wire the circuit as illustrated in the diagram. Polarity matters for LEDs so the positive pole (usually **red wire** from the battery pack) has to **connect to the anode** of the LED, which is typically the longer lead (testing which one is the right one by swapping the connections will NOT hurt the LED, it just won't light up). Make sure that the wiring is correct by turning on the battery pack, all LEDs in the circuit should light up (note that you will not see IR LEDs with the naked eye). If not, check for any loose wiring, accidental shorts (wires touching), correct polarity on the LEDs and sufficient battery charge. To keep connections tight and insulated from each other, twist wires together firmly and wrap with a layer of electrical tape or heat shrink.
@@ -73,7 +64,7 @@ The total capacity (=lifetime) of a battery depends strongly on the material and
  $$\left( P=V\cdot I=0.8\text{ V}\cdot 25\text{ mA}=0.02\text{ W} \right)$$.
 
  <div class="pull-right gap-left">
-  {% include image.html path="/resources/images/" img="parallel_wiring" caption="Parallel wiring of two and two serial LEDs (blue and IR in series on the bottom, red and green on the top, total consumption ~20mA)." %}
+  {% include image.html img="/resources/images/lightbox/parallel_wiring.jpg" caption="Parallel wiring of two and two serial LEDs (blue and IR in series on the bottom, red and green on the top, total consumption ~20mA)." %}
 </div>
 
  - **Higher voltage LEDs**: If you want to drive several higher voltage LEDs (e.g. mutiple green, blue or UV), the 6V available from the 4 x AA battery pack may not be sufficient to drive them in series. You can either try to fit more batteries into the light box to increase total circuit voltage, use higher voltage batteries (be mindful of the trade-off in total capacity), or wire your LEDs in parallel instead of in series (adding the appropriate resistor for each parallel circuit) with the caveat that this circuit will consume more current so the batteries will not last as long. See an example of parallel wiring of two and two serial LEDs (blue and IR in series on the bottom, red and green on the top) on the right.
@@ -81,15 +72,15 @@ The total capacity (=lifetime) of a battery depends strongly on the material and
 ## Assembly
 
 <center>
- {% include image.html path="/resources/images/" img="enclosure_with_LED_holder" height="130px" caption="" %}
+ {% include image.html img="/resources/images/lightbox/enclosure_with_LED_holder.jpg" height="130px" caption="" %}
 
- {% include image.html path="/resources/images/" img="glue_slideholder" height="130px" caption="" %}
+ {% include image.html img="/resources/images/lightbox/glue_slideholder.jpg" height="130px" caption="" %}
 
- {% include image.html path="/resources/images/" img="assembly_enclosure_with_holder" height="130px" caption="" %}
+ {% include image.html img="/resources/images/lightbox/assembly_enclosure_with_holder.jpg" height="130px" caption="" %}
 
- {% include image.html path="/resources/images/" img="lightbox_assembly_inside" height="130px" caption="" %}
+ {% include image.html img="/resources/images/lightbox/lightbox_assembly_inside.jpg" height="130px" caption="" %}
 
- {% include image.html path="/resources/images/" img="lightbox_with_slides" height="130px" caption="" %}
+ {% include image.html img="/resources/images/lightbox/lightbox_with_slides.jpg" height="130px" caption="" %}
 </center>
 <br/>
 
@@ -98,7 +89,7 @@ The total capacity (=lifetime) of a battery depends strongly on the material and
  - Add glue to the underside of the bigger part of the slide holder and attach it to the outside top of the enclosure lid such that it frames the LED cutouts in the acryl now attached to the underside of the lid. Do not us excess glue since it often expands and might interfere with the microscope slide position right on top of the lid. Let glue set to make sure the bigger side of the slide holder is firmly attached (depending on the glue may take several hours or overnight). Do NOT glue the smaller side of the slide holder!
 
  <div class="pull-right gap-left">
-  {% include image.html path="/resources/images/" img="assembly_schematic" caption="Overview schematic of the light box assembly." %}
+  {% include image.html img="/resources/images/lightbox/assembly_schematic.jpg" caption="Overview schematic of the light box assembly." %}
  </div>
 
  - Insert the LEDs with the assembled circuit into the LED holes in the acryl. Fix LEDs in place with electrical tape or silicone. Tape is not as robust over time but has the advantage that the circuit is exchangeable later on for different LED combinations. Add battery pack into the bottom of the enclosure, if too loose can be fixed lightly into place with double sided tape.
