--- a/people/_posts/2016-01-01-skopf.md
+++ b/people/_posts/2016-01-01-skopf.md
@@ -1,7 +1,7 @@
 ---
 layout: person
 title: Sebastian Kopf
-position: Primary Investigator
+position: Principal Investigator
 group: faculty
 email: sebastian.kopf@colorado.edu
 phone: (303) 735-6207
