--- a/people/_posts/2016-10-01-ecowley.md
+++ b/people/_posts/2016-10-01-ecowley.md
@@ -3,12 +3,14 @@ layout: person
 title: Elise Cowley
 position: IQBio Rotation Student
 group: grad
-email:
+email: elise.cowley@colorado.edu
 phone:
 address:
-thumbnail:
-picture:  
+thumbnail: /people/images/ecowley_thumbnail.jpg
+picture: /people/images/ecowley_desert.jpg
 caption:
 ---
 
 # About
+
+Elise is a graduate student in the Integrated Quantitative Biology program.
