--- a/news/_posts/2016-12-10-AGU-2016.md
+++ b/news/_posts/2016-12-10-AGU-2016.md
@@ -1,9 +1,7 @@
 ---
-title: Shaelyn and Allison at AGU
+title: Shaelyn and Allison presenting at AGU
 layout: news_item
 ---
-
-### Shaelyn and Allison are presenting posters at AGU!
 
 Shaelyn Silverman is presenting a poster on 
 *Measuring Ancient Air Pressure Using Fossilized Cyanobacteria* (Abstract ID 121646)
