--- a/news/_posts/2016-12-10-AGU-2016.md
+++ b/news/_posts/2016-12-10-AGU-2016.md
@@ -7,7 +7,7 @@ Shaelyn Silverman is presenting a poster on
 *Measuring Ancient Air Pressure Using Fossilized Cyanobacteria* (Abstract ID 121646)
 on work that is part of her Senior Thesis at CU Boulder together with Sanjoy Som (NASA Ames). 
 Allison Lee is presenting a poster on how *Iron availability influences 15N-isotope fractionation 
-during nitrogen fixation by aerobic chemoheterotroph Azotobacter vinelandii* (Abstract ID# 184186) on 
+during nitrogen fixation by aerobic chemoheterotroph Azotobacter vinelandii* (Abstract ID 184186) on 
 work that is part of her undergraduate research in [Xinning Zhang's new lab](http://scholar.princeton.edu/xinningz/people-0) 
 at Princeton University. 
 First time at AGU, congratulations to both and have a great time at the conference!
