nadia profile update

--- a/people/_posts/2016-03-15-nadia.md
+++ b/people/_posts/2016-03-15-nadia.md
@@ -10,10 +10,19 @@ address: >
   4001 Discovery Drive<br/>
   Room #218, SEEC (Lab wing)<br/>
   Boulder, CO 80309
-picture_profile: /header_images/people/skopf_thumb.jpg
-picture_page:  /header_images/people/skopf_mbl.jpg
+thumbnail: /people/images/nadia_thumbnail.jpg
+picture:  /people/images/nadia_mountains.jpg
+caption:
 ---
+
+## Bio
+
+- **2016-present** - Professional Research Assistant, University of Colorado Boulder
+- **2011-2015** - Postdocoral Researcher, University of Western Ontario
+- **2005-2010** - Ph.D., Organic Geochemistry Unit, University of Bristol
+- **2002-2004** - M.S., University of Engineering and Technology, Lahore
+- **1999-2001** - B.S., University of Punjab, Lahore
 
 # About
 
-Nadia is the laboratory manager of the Organic Geochemistry Core Facility
+My main research interests involve the application of analytical techniques to biogeochemical processes relating to natural environments. Previously, I applied a wide range of molecular and stable isotope approaches to investigate the flow of Carbon from atmospheric methane into the soils through analysis of microbial biomarkers. In addition to that, I also studied paleo-climates by applying stable isotope approaches to sediments through analysis of fossils biomarkers. I’m also interested in developing and applying organic geochemistry and molecular/isotopic biogeochemical approaches to environmental studies. I believe there are considerable prospects for developing innovative new approaches due to the wide ranging geochemical and biogeochemical interests that exist here at CU Boulder.
