update Nadia profile

--- a/people/_posts/2016-03-15-nadia.md
+++ b/people/_posts/2016-03-15-nadia.md
@@ -1,7 +1,7 @@
 ---
 layout: person
 title: Nadia Dildar
-position: Laboratory Manager
+position: Organic Geochemistry Lab Manager
 group: staff
 email: nadia.dildar@colorado.edu
 phone: (303) 735-3277
