marconi paper added

--- a/publications/references.bib
+++ b/publications/references.bib
@@ -1,6 +1,16 @@
 %% Created using Papers on Mon, 07 Mar 2016.
 %% http://papersapp.com/papers/
 
+@article{
+url_Paper = {https://db.tt/GK5WGBbobD},
+author = {Marconi, D and Kopf, S H and Rafter, P A and Sigman, D},
+title = {{Aerobic respiration along isopycnals leads to overestimation of the isotope effect of denitrification in the ocean water column.}},
+journal = {Geochimica Et Cosmochimica Acta},
+year = {2016},
+volume = {197},
+pages = {1--54}
+}
+
 @incollection{Bose:2011bj,
 author = {Bose, A and Kopf, S H and Newman, D K},
 title = {{From Geocycles to Genomes and Back}},
