--- a/publications/references.bib
+++ b/publications/references.bib
@@ -1,14 +1,14 @@
 %% Created using Papers on Mon, 07 Mar 2016.
 %% http://papersapp.com/papers/
 
-@article{
-url_Paper = {https://db.tt/GK5WGBbobD},
+@article{Marconi:2016ab,
 author = {Marconi, D and Kopf, S H and Rafter, P A and Sigman, D},
 title = {{Aerobic respiration along isopycnals leads to overestimation of the isotope effect of denitrification in the ocean water column.}},
 journal = {Geochimica Et Cosmochimica Acta},
 year = {2016},
 volume = {197},
-pages = {1--54}
+pages = {1--54},
+url_Paper = {https://db.tt/GK5WGBbobD}
 }
 
 @incollection{Bose:2011bj,
