--- a/publications/references.bib
+++ b/publications/references.bib
@@ -7,8 +7,7 @@ title = {{Aerobic respiration along isopycnals leads to overestimation of the is
 journal = {Geochimica Et Cosmochimica Acta},
 year = {2016},
 volume = {197},
-pages = {1--54},
-url_Paper = {https://db.tt/GK5WGBbobD}
+pages = {1--54}
 }
 
 @incollection{Bose:2011bj,
