lab opening news

--- a/people/_posts/2016-03-15-nadia.md
+++ b/people/_posts/2016-03-15-nadia.md
@@ -12,7 +12,7 @@ address: >
   Boulder, CO 80309
 thumbnail: /people/images/nadia_thumbnail.jpg
 picture:  /people/images/nadia_mountains.jpg
-caption:
+caption: At Lost Gulch point on Flagstaff Mountain, Colorado
 ---
 
 ## Bio
