joint geobio added

--- a/people/_posts/2016-03-15-nadia.md
+++ b/people/_posts/2016-03-15-nadia.md
@@ -3,6 +3,7 @@ layout: person
 title: Nadia Dildar
 position: Organic Geochemistry Lab Manager
 group: staff
+collaborator: yes
 email: nadia.dildar@colorado.edu
 phone: (303) 735-3277
 address: >
