update Nadia bio

--- a/people/_posts/2016-03-15-nadia.md
+++ b/people/_posts/2016-03-15-nadia.md
@@ -18,11 +18,10 @@ caption: At Lost Gulch point on Flagstaff Mountain, Colorado
 
 ## Bio
 
-- **2016-present** - Professional Research Assistant, University of Colorado Boulder
+- **2016-present** - Research Associate, University of Colorado Boulder
 - **2011-2015** - Postdocoral Researcher, University of Western Ontario
 - **2005-2010** - Ph.D., Organic Geochemistry Unit, University of Bristol
 - **2002-2004** - M.S., University of Engineering and Technology, Lahore
-- **1999-2001** - B.S., University of Punjab, Lahore
 
 # About
 
