--- a/people/_posts/2017-02-10-nabil.md
+++ b/people/_posts/2017-02-10-nabil.md
@@ -3,6 +3,7 @@ layout: person
 title: Nabil Chaudhry
 position: Research assistant
 group: staff
+alumni: yes
 email: nabil.chaudhry@colorado.edu
 phone:
 address:
