--- a/people/_posts/2017-02-13-kelsey.md
+++ b/people/_posts/2017-02-13-kelsey.md
@@ -4,6 +4,8 @@ title: Kelsey Dahlgren
 position: IQBio Rotation Student
 group: grad
 email: Kelsey.Dahlgren@colorado.edu
+alumni: yes
+website: https://www.colorado.edu/lab/cameron/kelsey-dahlgren
 phone:
 address:
 thumbnail: /people/images/kelsey_thumbnail.jpg
