--- a/people/_posts/2016-09-15-shaelyn.md
+++ b/people/_posts/2016-09-15-shaelyn.md
@@ -3,6 +3,8 @@ layout: person
 title: Shaelyn Silverman
 position: Honors Thesis Student
 group: undergrad
+alumni: yes
+website: http://www.gps.caltech.edu/people/shaelyn-n-silverman
 email:
 phone:
 address:
@@ -13,4 +15,4 @@ caption: On top of Quandary peak.
 
 # About
 
-Hello! I am a senior at the University of Colorado Boulder studying molecular biology and neuroscience with keen interests in astrobiology and geomicrobiology. Cultivating the latter aspect of my interests, I am currently working on my undergraduate honors thesis studying the morphological and isotopic effects of cyanobacteria under varying nitrogen partial pressures. In my free time you can usually find me climbing the mountains, traveling the world (11 countries; 6 continents and counting) or hitting the slopes. 
+Hello! I am a senior at the University of Colorado Boulder studying molecular biology and neuroscience with keen interests in astrobiology and geomicrobiology. Cultivating the latter aspect of my interests, I am currently working on my undergraduate honors thesis studying the morphological and isotopic effects of cyanobacteria under varying nitrogen partial pressures. In my free time you can usually find me climbing the mountains, traveling the world (11 countries; 6 continents and counting) or hitting the slopes.
