--- a/people/_posts/2018-09-01-kasdi.md
+++ b/people/_posts/2018-09-01-kasdi.md
@@ -6,8 +6,8 @@ group: undergrad
 email: kasu0117@colorado.edu
 phone:
 address:
-thumbnail: /people/images/gitlab.png
-picture:
+thumbnail: /people/images/kasdi_thumbnail.jpg
+picture: /people/images/kasdi.jpg
 caption:  
 ---
 
