--- a/people/_posts/2017-11-01-jesse.md
+++ b/people/_posts/2017-11-01-jesse.md
@@ -1,7 +1,7 @@
 ---
 layout: person
 title: Jesse Colangelo
-position: Research Associate
+position: C-DEBI postdoctoral fellow
 group: postdoc
 collaborator: yes
 email: jesse.colangelo@colorado.edu
@@ -10,6 +10,8 @@ picture:
 caption:
 ---
 
-## Bio
+
 
 ## About
+
+ I am a C-DEBI (Center for Deep Energy Biosphere Investigations) postdoctoral fellow. My current research projects investigate drivers and relicts of microbial evolution and focus on the metabolically diverse bacteria of low energy subsurface marine sediments. This work employs laboratory based microbiology cell culturing, molecular biology, geochemistry and stable isotope techniques to characterize the mechanisms underlying microbial physiology and interactions in this vast ecosystem. I really enjoy working with my hands in the lab, fighting with stubborn microbes, and chatting with supervisors, colleagues, and students about our projects and what each of us are respectively hung up on. Also hanging out with my kid.
